--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "francescomalatesta/laravel-api-boilerplate-jwt",
+    "name": "VPetar/laravel-api-boilerplate-jwt",
     "description": "An API Boilerplate to create a ready-to-use REST API in seconds.",
     "keywords": ["laravel", "api", "boilerplate", "jwt", "auth", "rest"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=7.1.3",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "5.8.*",
         "fideloper/proxy": "^4.0",
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "1.0.*",
@@ -14,15 +14,17 @@
         "barryvdh/laravel-cors": "0.11.*"
     },
     "require-dev": {
+        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database/seeds",
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
