--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.3",
-        "laravel/framework": "5.8.*",
+        "php": ">=7.2",
+        "laravel/framework": "6.*",
         "fideloper/proxy": "^4.0",
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "1.0.*",
         "dingo/api": "^2.1",
-        "barryvdh/laravel-cors": "0.11.*"
+        "barryvdh/laravel-cors": "^0.11"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
